--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
+aiohttp==3.5.4
+aiohttp-jinja2==1.1.0
+async-timeout==3.0.1
+attrs==18.2.0
+backports.functools-lru-cache==1.3
+chardet==3.0.4
 DAWG-Python==0.7.2
 docopt==0.6.2
 elasticsearch==6.3.1
+idna==2.8
+idna-ssl==1.1.0
+Jinja2==2.10
 joblib==0.13.1
+MarkupSafe==1.1.0
+multidict==4.5.2
 nltk==3.4
 numpy==1.16.0
 overrides==1.9
 pandas==0.24.0
 pymorphy2==0.8
 pymorphy2-dicts==2.4.393442.3710985
+python-dateutil==2.7.5
+python-dotenv==0.10.1
+pytz==2018.9
 scikit-learn==0.20.0
 scipy==1.2.0
 singledispatch==3.4.0.3
 six==1.12.0
 tqdm==4.26.0
+typing-extensions==3.7.2
+urllib3==1.24.1
 xlrd==1.2.0
 yargy==0.12.0
+yarl==1.3.0
